Add unit-test coverage and resolve SonarCloud issues (WireMock + EjbcaConnectionFactory extraction) (#128)