@@ -29,9 +29,9 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.UnsupportedMediaTypeException;
 import org.springframework.web.reactive.function.client.WebClient;
 
+import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.otilm.ca.connector.ejbca.api.AuthorityInstanceControllerImpl.ATTRIBUTE_CERTIFICATE_PROFILE;
 import static com.otilm.ca.connector.ejbca.api.AuthorityInstanceControllerImpl.ATTRIBUTE_CERTIFICATION_AUTHORITY;
@@ -135,25 +135,11 @@ public class EjbcaServiceImpl implements EjbcaService {
         EjbcaWS ejbcaWS = authorityInstanceService.getConnection(authorityUuid);
 
         try {
-            CertificateResponse certificateResponse;
-            if (requestFormat == CertificateRequestFormat.CRMF) {
-                certificateResponse = ejbcaWS.crmfRequest(
-                        username,
-                        password,
-                        certificateRequest,
-                        null,
-                        "PKCS7WITHCHAIN");
-            } else if (requestFormat == CertificateRequestFormat.PKCS10) {
-                certificateResponse = ejbcaWS.pkcs10Request(
-                        username,
-                        password,
-                        certificateRequest,
-                        null,
-                        "PKCS7WITHCHAIN");
-            } else {
-                // we should not get here anyway
-                throw new CertificateRequestException("Unsupported certificate request format");
-            }
+            CertificateResponse certificateResponse = switch (requestFormat) {
+                case CRMF -> ejbcaWS.crmfRequest(username, password, certificateRequest, null, "PKCS7WITHCHAIN");
+                case PKCS10 -> ejbcaWS.pkcs10Request(username, password, certificateRequest, null, "PKCS7WITHCHAIN");
+                default -> throw new CertificateRequestException("Unsupported certificate request format");
+            };
             CertificateDataResponseDto response = new CertificateDataResponseDto();
             response.setCertificateData(new String(certificateResponse.getData(), StandardCharsets.UTF_8));
             return response;
@@ -192,7 +178,7 @@ public class EjbcaServiceImpl implements EjbcaService {
     }
 
     @Override
-    public SearchCertificatesRestResponseV2 searchCertificates(String authorityInstanceUuid, String restUrl, SearchCertificatesRestRequestV2 request) throws Exception {
+    public SearchCertificatesRestResponseV2 searchCertificates(String authorityInstanceUuid, String restUrl, SearchCertificatesRestRequestV2 request) throws NotFoundException, IOException {
         WebClient ejbcaWC = authorityInstanceService.getRestApiConnection(authorityInstanceUuid);
         try {
             return ejbcaWC.post()
@@ -203,9 +189,9 @@ public class EjbcaServiceImpl implements EjbcaService {
                     .bodyToMono(SearchCertificatesRestResponseV2.class)
                     .block();
         } catch (UnsupportedMediaTypeException e) {
-            throw new Exception("Failed to communicate to EJBCA using REST API");
+            throw new IOException("Failed to communicate to EJBCA using REST API", e);
         } catch (Exception e) {
-            throw new Exception(e.getMessage());
+            throw new IOException(e.getMessage(), e);
         }
     }
 
@@ -217,7 +203,7 @@ public class EjbcaServiceImpl implements EjbcaService {
             if (cas == null || cas.isEmpty()) {
                 throw new NotFoundException("CertificateProfile on ca", authorityInstanceUuid);
             }
-            return cas.stream().map(p -> new NameAndIdDto(p.getId(), p.getName())).collect(Collectors.toList());
+            return cas.stream().map(p -> new NameAndIdDto(p.getId(), p.getName())).toList();
         } catch (AuthorizationDeniedException_Exception e) {
             throw new AccessDeniedException("Authorization denied on EJBCA", e);
         } catch (EjbcaException_Exception e) {
@@ -301,8 +287,6 @@ public class EjbcaServiceImpl implements EjbcaService {
     }
 
     private void setUserProfiles(UserDataVOWS user, List<RequestAttribute> raProfileAttrs) {
-        //String tokenType = AttributeDefinitionUtils.getAttributeValue(ATTRIBUTE_TOKEN_TYPE, raProfileAttrs);
-        //user.setTokenType(tokenType);
         user.setTokenType("USERGENERATED");
 
         NameAndIdDto endEntityProfile = AttributeDefinitionUtils.getNameAndIdData(ATTRIBUTE_END_ENTITY_PROFILE, raProfileAttrs);
